WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279702
[Writing Tools] Ensure completion handler is not called more than once.
https://bugs.webkit.org/show_bug.cgi?id=279702
Summary
[Writing Tools] Ensure completion handler is not called more than once.
Megan Gardner
Reported
2024-09-13 17:17:22 PDT
[Writing Tools] Ensure completion handler is not called more than once.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-13 17:22:03 PDT
<
rdar://problem/135985379
>
Megan Gardner
Comment 2
2024-09-13 17:24:14 PDT
<
rdar://problem/135985412
>
Megan Gardner
Comment 3
2024-09-13 17:24:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33651
EWS
Comment 4
2024-09-13 22:48:03 PDT
Committed
283669@main
(be318dad5bf3): <
https://commits.webkit.org/283669@main
> Reviewed commits have been landed. Closing PR #33651 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug