[Writing Tools] Ensure completion handler is not called more than once. https://bugs.webkit.org/show_bug.cgi?id=279702 rdar://135985412

Reviewed by Aditya Keerthi.

For some reason, this completion handler was being called more than once.
Clear it once it's called to keep this from happening.

* Source/WebKit/UIProcess/mac/WKTextAnimationManager.mm:
(-[WKTextAnimationManager initWithWebViewImpl:]):
(-[WKTextAnimationManager addTextAnimationForAnimationID:withData:]):

Canonical link: https://commits.webkit.org/283669@main